--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
         <a href="/register" class="mt-3 d-block">Register</a>
-        
+
         <!-- Flash message block -->
         {% with messages = get_flashed_messages(with_categories=true) %}
           {% if messages %}
@@ -35,3 +35,4 @@
     </div>
 </body>
 </html>
+                                                                                                                                           1,1           Top
