--- a/register.html
+++ b/register.html
@@ -1,36 +1,36 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container">
-        <h2 class="mt-5">Register</h2>
-        <form method="POST" action="/register">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" name="username" class="form-control" id="username" placeholder="Enter username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" name="password" class="form-control" id="password" placeholder="Enter password" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
+    <h1>Register</h1>
+    <form action="{{ url_for('register') }}" method="POST">
+        <label>Username:</label>
+        <input type="text" name="username" required><br>
 
-        <!-- Flash message block -->
-        {% with messages = get_flashed_messages(with_categories=true) %}
-          {% if messages %}
-            <div class="mt-3">
-              {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">{{ message }}</div>
-              {% endfor %}
-            </div>
-          {% endif %}
-        {% endwith %}
-    </div>
+        <label>Password:</label>
+        <input type="password" name="password" required><br>
+
+        <label>First Name:</label>
+        <input type="text" name="first_name" required><br>
+
+        <label>Last Name:</label>
+        <input type="text" name="last_name" required><br>
+
+        <label>Email:</label>
+        <input type="email" name="email" required><br>
+
+        <button type="submit">Register</button>
+    </form>
+    <p><a href="{{ url_for('login') }}">Already have an account? Login here</a></p>
 </body>
 </html>
+
+
+~                                                                                                                                                            
+~                                                                                                                                                            
+~                                                                                                                                                            
+"register.html" [readonly] 32L, 889B                                                                                                       1,1           All
